# when-the-factory

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmakebuild.sh
assets/images/: spritesheet-test-01.png~
cmake/: FindSDL2_image.cmake  FindSDL2_ttf.cmake
include/: camera.h  entity.h  gameplay.h  items.h  map.h  renderer.h  ui.h  utils.h  widget.h
include/objects/: building.h  flow.h
src/: camera.c  entitiy.c  entity.c  gameplay.c  items.c  main.c  map.c  renderer.c  ui.c  utils.c  widget.c
src/objects/: building.c  flow.c
